Fix button icon alignment

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   height: 40px;
   width: 40px;
+  padding: 0;
   color: $bd-light-gray;
   text-align: center;
   line-height: 40px;
